--- a/WeatherWebsite/public_html/index.html
+++ b/WeatherWebsite/public_html/index.html
@@ -23,6 +23,7 @@ and open the template in the editor.
         <h2 class="box">Weather for: <span id="location"></span></h2>    
         
         <h2 class="box">Temperature: <span id="temperature"></span> F</h2>
+        <h2 class="box">Feels Like: <span id="feelsLike"></span > F</h2>
         <h2 class="box">Wind Speed: <span id="wind"></span> MPH</h2>
         <h2 class="box">Sky Conditions: <span id="sky"></span> </h2>
         
